# ArapucaInTallBo

./: CMakeLists.txt  README.md  main.cpp
FilterUtilities/: CMakeLists.txt  FFTCutoff.cpp  FFTCutoff.h  FilterUtilities.cpp  FilterUtilities.h  GolaySavitzkyCoeff.cpp  GolaySavitzkyCoeff.h
ROOTUtilities/: Analysis.cpp  Analysis.h  CMakeLists.txt  DataAccess.cpp  DataAccess.h
